--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Contact page Bhushan</h1>
+    <h1>Contact page Bhushan and Linal</h1>
 </body>
 </html>
