commit for reactIntegration

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!-- Feature1 branch has been fixed by bhushan2311 by adding buttons -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,5 +9,7 @@
 </head>
 <body>
     <h1>Contact page of Bhushan and Linal</h1>
+    <button>button 1</button>
+    <button>button 2</button>
 </body>
 </html>
